--- a/css/custom.css
+++ b/css/custom.css
@@ -2,14 +2,21 @@
    font-family: 'Trebuchet MS';
    /* font-family: 'Noto Sans', sans-serif; */
 }
+
 header {
     width: 100%;
     height: 60px;
 }
+
+/* body {
+   background-color: 'black';
+} */
+
 nav {
  background-color: #4c2685;
 }
-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+
+form { padding: 3px; position: fixed; bottom: 0; width: 100%; }
 form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 #messages { list-style-type: none; margin: 0; padding: 0; }
@@ -22,6 +29,11 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
 }
+
+/* main {
+   background-color: #565656;
+} */
+
 /* #plot-div1 {
    width: 300px;
 } */
